# ecommerce_rag

./: README.md  chatbot.py  ingest.py  main.py  pyproject.toml  sample_logs.txt
data/: product_manual.md  return_policy.md  shipping_policy.md
vectorstore/: index.faiss  index.pkl
vectorstore/faiss_index/: index.faiss  index.pkl
